external-crates/move/crates/move-compiler/tests/move_check/parser/phantom_param_missing_type_var.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/phantom_param_missing_type_var.move:2:33
  │
2 │     struct S<phantom T1, phantom> {
  │                                 ^
  │                                 │
  │                                 Unexpected '>'
  │                                 Expected an identifier
